k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dotnet-prod
  labels:
    name: dotnet-prod
    environment: production
